// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceBroadcastPlaybackBody when rendering a buffering voice broadcast should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        data-testid="room-avatar"
      >
        room avatar: 
        My room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_VoiceBroadcastHeader_room_wrapper"
        >
          <div
            class="mx_VoiceBroadcastHeader_room"
          >
            My room
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 14px; height: 14px;"
            />
          </div>
          Buffering…
        </div>
      </div>
      <div
        class="mx_LiveBadge"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        Live
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="30s backward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
      <div
        aria-label="pause voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_12"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
          />
        </svg>
      </div>
      <div
        aria-label="30s forward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
    </div>
    <input
      aria-label="Audio seek bar"
      class="mx_SeekBar"
      max="1"
      min="0"
      step="0.001"
      style="--fillTo: 0;"
      tabindex="0"
      type="range"
      value="0"
    />
    <div
      class="mx_VoiceBroadcastBody_timerow"
    >
      <time
        class="mx_Clock"
        datetime="PT0S"
      >
        00:00
      </time>
      <time
        class="mx_Clock"
        datetime="-PT23M42S"
      >
        -23:42
      </time>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastPlaybackBody when rendering a pause/not-live broadcast should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        data-testid="room-avatar"
      >
        room avatar: 
        My room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_VoiceBroadcastHeader_room_wrapper"
        >
          <div
            class="mx_VoiceBroadcastHeader_room"
          >
            My room
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          Voice broadcast
        </div>
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="30s backward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
      <div
        aria-label="resume voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl mx_VoiceBroadcastControl-play"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_16"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743Z"
          />
        </svg>
      </div>
      <div
        aria-label="30s forward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
    </div>
    <input
      aria-label="Audio seek bar"
      class="mx_SeekBar"
      max="1"
      min="0"
      step="0.001"
      style="--fillTo: 0;"
      tabindex="0"
      type="range"
      value="0"
    />
    <div
      class="mx_VoiceBroadcastBody_timerow"
    >
      <time
        class="mx_Clock"
        datetime="PT0S"
      >
        00:00
      </time>
      <time
        class="mx_Clock"
        datetime="-PT23M42S"
      >
        -23:42
      </time>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastPlaybackBody when rendering a playing broadcast in pip mode should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody mx_VoiceBroadcastBody--pip"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        class="mx_AccessibleButton"
        role="button"
        tabindex="0"
      >
        <div
          data-testid="room-avatar"
        >
          room avatar: 
          My room
        </div>
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <div
            class="mx_VoiceBroadcastHeader_room_wrapper"
          >
            <div
              class="mx_VoiceBroadcastHeader_room"
            >
              My room
            </div>
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          Voice broadcast
        </div>
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="30s backward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
      <div
        aria-label="pause voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_12"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
          />
        </svg>
      </div>
      <div
        aria-label="30s forward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
    </div>
    <input
      aria-label="Audio seek bar"
      class="mx_SeekBar"
      max="1"
      min="0"
      step="0.001"
      style="--fillTo: 0;"
      tabindex="0"
      type="range"
      value="0"
    />
    <div
      class="mx_VoiceBroadcastBody_timerow"
    >
      <time
        class="mx_Clock"
        datetime="PT0S"
      >
        00:00
      </time>
      <time
        class="mx_Clock"
        datetime="-PT23M42S"
      >
        -23:42
      </time>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastPlaybackBody when rendering a playing broadcast should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        data-testid="room-avatar"
      >
        room avatar: 
        My room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_VoiceBroadcastHeader_room_wrapper"
        >
          <div
            class="mx_VoiceBroadcastHeader_room"
          >
            My room
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          Voice broadcast
        </div>
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="30s backward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
      <div
        aria-label="pause voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_12"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
          />
        </svg>
      </div>
      <div
        aria-label="30s forward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
    </div>
    <input
      aria-label="Audio seek bar"
      class="mx_SeekBar"
      max="1"
      min="0"
      step="0.001"
      style="--fillTo: 0;"
      tabindex="0"
      type="range"
      value="0"
    />
    <div
      class="mx_VoiceBroadcastBody_timerow"
    >
      <time
        class="mx_Clock"
        datetime="PT0S"
      >
        00:00
      </time>
      <time
        class="mx_Clock"
        datetime="-PT23M42S"
      >
        -23:42
      </time>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastPlaybackBody when rendering a playing/live broadcast should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        data-testid="room-avatar"
      >
        room avatar: 
        My room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_VoiceBroadcastHeader_room_wrapper"
        >
          <div
            class="mx_VoiceBroadcastHeader_room"
          >
            My room
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          Voice broadcast
        </div>
      </div>
      <div
        class="mx_LiveBadge"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        Live
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="30s backward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
      <div
        aria-label="pause voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_12"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
          />
        </svg>
      </div>
      <div
        aria-label="30s forward"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_secondary_content"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_24"
        />
      </div>
    </div>
    <input
      aria-label="Audio seek bar"
      class="mx_SeekBar"
      max="1"
      min="0"
      step="0.001"
      style="--fillTo: 0;"
      tabindex="0"
      type="range"
      value="0"
    />
    <div
      class="mx_VoiceBroadcastBody_timerow"
    >
      <time
        class="mx_Clock"
        datetime="PT0S"
      >
        00:00
      </time>
      <time
        class="mx_Clock"
        datetime="-PT23M42S"
      >
        -23:42
      </time>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastPlaybackBody when rendering a stopped broadcast should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        data-testid="room-avatar"
      >
        room avatar: 
        My room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_VoiceBroadcastHeader_room_wrapper"
        >
          <div
            class="mx_VoiceBroadcastHeader_room"
          >
            My room
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          Voice broadcast
        </div>
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="play voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl mx_VoiceBroadcastControl-play"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_16"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743Z"
          />
        </svg>
      </div>
    </div>
    <input
      aria-label="Audio seek bar"
      class="mx_SeekBar"
      max="1"
      min="0"
      step="0.001"
      style="--fillTo: 0;"
      tabindex="0"
      type="range"
      value="0"
    />
    <div
      class="mx_VoiceBroadcastBody_timerow"
    >
      <time
        class="mx_Clock"
        datetime="PT0S"
      >
        00:00
      </time>
      <time
        class="mx_Clock"
        datetime="-PT23M42S"
      >
        -23:42
      </time>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastPlaybackBody when rendering an error broadcast should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        data-testid="room-avatar"
      >
        room avatar: 
        My room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_VoiceBroadcastHeader_room_wrapper"
        >
          <div
            class="mx_VoiceBroadcastHeader_room"
          >
            My room
          </div>
        </div>
        <div
          aria-label="Change input device"
          class="mx_AccessibleButton mx_VoiceBroadcastHeader_line"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_Icon mx_Icon_16"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
            />
            <path
              d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
            />
          </svg>
          <span>
            @user:example.com
          </span>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          Voice broadcast
        </div>
      </div>
    </div>
    <div
      class="mx_VoiceBroadcastRecordingConnectionError"
    >
      <svg
        class="mx_Icon mx_Icon_16"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.713 17.713A.968.968 0 0 1 12 18a.968.968 0 0 1-.713-.287A.967.967 0 0 1 11 17a.97.97 0 0 1 .287-.712A.968.968 0 0 1 12 16a.97.97 0 0 1 .713.288A.968.968 0 0 1 13 17a.97.97 0 0 1-.287.713Zm0-4A.968.968 0 0 1 12 14a.968.968 0 0 1-.713-.287A.967.967 0 0 1 11 13V9a.97.97 0 0 1 .287-.712A.968.968 0 0 1 12 8a.97.97 0 0 1 .713.288A.968.968 0 0 1 13 9v4a.97.97 0 0 1-.287.713Z"
        />
        <path
          clip-rule="evenodd"
          d="M10.264 3.039c.767-1.344 2.705-1.344 3.472 0l8.554 14.969c.762 1.333-.2 2.992-1.736 2.992H3.446c-1.535 0-2.498-1.659-1.736-2.992l8.553-14.969ZM3.446 19 12 4.031l8.554 14.97H3.446Z"
          fill-rule="evenodd"
        />
      </svg>
      Unable to play this voice broadcast
    </div>
  </div>
</div>
`;
